# AutomatedSeriesClassification

./: setup.cfg
