##########################
# Setup.py Configuration #
##########################
[metadata]
name = automated_series_classification
version = 0.0.1
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/iwatobipen/AutomatedSeriesClassification
download_url = https://github.com/iwatobipen/AutomatedSeriesClassification/releases
project_urls =
    Bug Tracker = https://github.com/iwatobipen/AutomatedSeriesClassification/issues
    Source Code = https://github.com/iwatobipen/AutomatedSeriesClassification

# Author information
author = iwatobipen
# author_email = ...
maintainer = iwatobipen
# maintainer_email = ...

# License Information
license = MIT
license_file = LICENSE

[options]
# Requirements (formerly known as requirements.txt)
install_requires =
    click==8.0.1
    matplotlib==3.4.2
    numpy==1.21.0
    pandas==1.2.5
    rdkit-pypi==2021.3.3
    scikit-learn==0.24.2
    seaborn==0.11.1
    tqdm==4.61.1
    wget==3.2
    xlrd==2.0.1

# Where is my code (Part 1/3)
packages = find:
# Where is my code (Part 2/3)
package_dir =
    = src

[options.packages.find]
# Where is my code (Part 3/3)
where = src
